# NetPolicy

./: .gitignore  Cargo.toml  README.MD  ROADMAP.MD  ROADMAP_V2.md
.github/workflows/: ci.yml  release.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/web/: index.html  settings.html  xray.config.json  xray.html
android/app/src/main/java/com/ZeroX/netpolicy/: MainActivity.java  NetpolicyVpnService.java
android/app/src/main/java/com/netpolicy/: MainActivity.java  NetpolicyVpnService.java
android/app/src/main/res/layout/: activity_main.xml
benches/: engine_bench.rs
cmd/netpolicy/: main.rs
cmd/netpolicyd/: main.rs
core/: action_backend.rs  actions.rs  dsl.rs  ebpf.rs  engine.rs  inspector.rs  rules.rs  state.rs  telemetry.rs  xray.rs
docs/: openwrt.md  rules-schema.md  ui-web.md  v2ray-xray.md
examples/: ruleset.v1.yaml  urls.txt
openwrt/package/luci-app-netpolicyd/: Makefile
openwrt/package/luci-app-netpolicyd/luasrc/controller/: netpolicyd.lua
openwrt/package/luci-app-netpolicyd/luasrc/view/netpolicyd/: index.htm
openwrt/package/netpolicyd/: Makefile
openwrt/package/netpolicyd/files/: netpolicyd.config  netpolicyd.init
openwrt/package/netpolicyd/files/web/: app.js  ruleset.html  style.css
src/: lib.rs
tests/: inspector_integration.rs  netpolicy_cli.rs
