[package]
name = "netpolicy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tiny_http = "0.12"
base64 = "0.22"
url = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false

[[bin]]
name = "netpolicyd"
path = "cmd/netpolicyd/main.rs"

[[bin]]
name = "netpolicy"
path = "cmd/netpolicy/main.rs"
